--- a/jobloop.html
+++ b/jobloop.html
@@ -1,13 +1,124 @@
 <head>
-  <title>jobloop</title>
+  <link href='http://fonts.googleapis.com/css?family=Raleway:400,600' rel='stylesheet' type='text/css'>
+  <title>Job Loop</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
-  {{> hello}}
+  {{renderPage}}
 </body>
 
-<template name="hello">
-  <h1>Hello World!</h1>
-  {{greeting}}
-  <input type="button" value="Click" />
+<template name="home">
+  {{> homeHeader}}
+
+  <div class="container">
+
+	<div class="row-fluid">
+	  <div class="span12">
+	    <div class="banner">
+	    	<p>This is an explanation about what this app does. It's really amazing and makes everyone immediately understand our intent and want to use this product.</p>
+	    	<i class="icon-heart-empty icon-large"></i>
+	    </div>
+	    <div class="row-fluid">
+
+	    	{{> topbar}}
+
+	    	<div class="appSort">
+	    	    <div class="appHeading">
+	    	    	<h4>Open Applications</h4>
+	    	    </div>
+	    		<div class="sortSelect">
+		    		<p>Sort by:
+			    	<select>
+					  <option>Date</option>
+					  <option>Company</option>
+					  <option>Task</option>
+					</select>
+					</p>
+				</div>
+			</div>
+
+	    	<div class="row-fluid appRow">
+	    		{{> applications}}
+	    		{{> applications}}
+	    		{{> applications}}
+	    		{{> applications}}
+            </div>
+
+	    </div>
+	  </div>
+	</div>
+
+	{{> homeFooter}}
+
+  </div>
 </template>
+
+<template name="applications">
+	<div class="applicationSummary">
+		{{> gradientMenu}}
+	</div>
+
+</template>
+
+<template name="gradientMenu">
+	<div class="tabbable"> <!-- Only required for left/right tabs -->
+	  <ul class="nav nav-tabs">
+	    <li class="active"><a href="#tab1" data-toggle="tab">Application</a></li>
+	    <li><a href="#tab2" data-toggle="tab">Contact</a></li>
+	    <li><a href="#tab2" data-toggle="tab">Screen</a></li>
+	    <li><a href="#tab2" data-toggle="tab">Interviews</a></li>
+	    <li><a href="#tab2" data-toggle="tab">Decisions</a></li>
+	  </ul>
+
+	  <div class="tab-content">
+	    <div class="tab-pane active" id="tab1">
+	      <p>I'm in Section 1.</p>
+	    </div>
+	    <div class="tab-pane" id="tab2">
+	      <p>Howdy, I'm in Section 2.</p>
+	    </div>
+	  </div>
+	</div>
+</template>
+
+<template name="topbar">
+	<div class="span12 topSpan">
+		<div class="span6 topbarBox" id="toDoTopbar">
+			<ul>
+			  <li><a tabindex="-1" href="#">Action</a></li>
+			  <li><a tabindex="-1" href="#">Another action</a></li>
+			  <li><a tabindex="-1" href="#">Something else here</a></li>
+			</ul>
+		</div>
+
+		<div class="span6 topbarBox" id="statsTopbar">
+			<p>Stats</p>
+			
+		</div>
+	</div>
+</template>
+
+<template name="homeHeader">
+	<div id="utils">
+		<div class="navbar">
+		  <div class="navbar-inner">
+		  	<div class="logos"><i class="icon-briefcase icon-2x"></i><h3>JobLoop</h3></div>
+			    <ul class="nav">
+			      <li class="active"><a href="#"><i class="icon-envelope-alt"></i></a></li>
+			      <li><a href="#"><i class="icon-calendar"></i></a></li>
+			      <li><a href="#"><i class="icon-bell-alt"></i></a></li>
+			      <li><a href="#">Log In</a></li>
+			    </ul>
+		  </div>
+		</div>
+	</div>
+</template>
+
+<template name="homeFooter">
+	<div id="footer">
+	</div>
+</template>
+
+
+
