--- a/client/jobloop.html
+++ b/client/jobloop.html
@@ -21,27 +21,13 @@
 	    </div>
 	    <div class="row-fluid">
 
-	    	{{> topbar}}
-
 	    	<div class="appSort">
 	    	    <div class="appHeading">
 	    	    	<h4>Open Applications</h4>
 	    	    </div>
-	    		<div class="sortSelect">
-		    		<p>Sort by:
-			    	<select>
-					  <option>Date</option>
-					  <option>Company</option>
-					  <option>Task</option>
-					</select>
-					</p>
-				</div>
 			</div>
 
 	    	<div class="row-fluid appRow">
-	    		{{> applications}}
-	    		{{> applications}}
-	    		{{> applications}}
 	    		{{> applications}}
             </div>
 
@@ -56,7 +42,8 @@
 
 <template name="applications">
 	<div class="applicationSummary">
-		{{> gradientMenu}}
+		<h3>Job Company Lala</h3> - <h4>Job Title 2</h4>
+		<p>This is where the application notes will go.</p>
 	</div>
 
 </template>
@@ -108,7 +95,7 @@
 			      <li class="active"><a href="#"><i class="icon-envelope-alt"></i></a></li>
 			      <li><a href="#"><i class="icon-calendar"></i></a></li>
 			      <li><a href="#"><i class="icon-bell-alt"></i></a></li>
-			      <li><a href="#">Log In</a></li>
+			      <li><a href="#">Sign Up / Log In</a></li>
 			    </ul>
 		  </div>
 		</div>
