Added login authentication via Google and Github.

--- a/client/jobloop.html
+++ b/client/jobloop.html
@@ -108,7 +108,7 @@
 			      <li class="active"><a href="#"><i class="icon-envelope-alt"></i></a></li>
 			      <li><a href="#"><i class="icon-calendar"></i></a></li>
 			      <li><a href="#"><i class="icon-bell-alt"></i></a></li>
-			      <li><a href="#">Log In</a></li>
+			      <li><a href="#">{{loginButtons align="right"}}</a></li>
 			    </ul>
 		  </div>
 		</div>
