Banner designed, main template set up.

--- a/client/jobloop.html
+++ b/client/jobloop.html
@@ -16,8 +16,20 @@
 	<div class="row-fluid">
 	  <div class="span12">
 	    <div class="banner">
-	    	<p>This is an explanation about what this app does. It's really amazing and makes everyone immediately understand our intent and want to use this product.</p>
-	    	<i class="icon-heart-empty icon-large"></i>
+	    	<table class="bannerTable">
+	    		<tr>
+	    		  <td class="bannericon"><i class="icon-map-marker icon-4x"></i></td>
+	    		  <td class="bannericon"><i class="icon-bar-chart icon-4x"></i></td>
+	    		  <td class="bannericon"><i class="icon-magic icon-4x"></i></td>
+	    		  <td class="bannericon"><i class="icon-trophy icon-4x"></i></td>
+	    		</tr>
+	    		<tr>
+	    		  <td>Add the positions you want to track</td>
+	    		  <td>Keep all the details in one place</td>
+	    		  <td>Keep track with stats and reminders</td>
+	    		  <td>Get an awesome job</td>
+	    		</tr>
+	    	</table>
 	    </div>
 	    <div class="row-fluid">
 
@@ -42,7 +54,7 @@
 
 <template name="applications">
 	<div class="applicationSummary">
-		<h3>Job Company Lala</h3> - <h4>Job Title 2</h4>
+		<h4>Job Company Lala - Job Title 2</h4>
 		<p>This is where the application notes will go.</p>
 	</div>
 
