--- a/client/jobloop.html
+++ b/client/jobloop.html
@@ -26,7 +26,7 @@
 	    		<tr>
 	    		  <td>Add the positions you want to track</td>
 	    		  <td>Keep all the details in one place</td>
-	    		  <td>Keep track with stats and reminders</td>
+	    		  <td>Follow progress with stats and reminders</td>
 	    		  <td>Get an awesome job</td>
 	    		</tr>
 	    	</table>
@@ -118,6 +118,7 @@
 	<div id="footer">
 	</div>
 </template>
+
 
 
 
