--- a/client/jobloop.html
+++ b/client/jobloop.html
@@ -12,8 +12,13 @@
   {{> homeHeader}}
 
   <div class="container">
-
+  	<div class="row-fluid">
+	  <div class="span11">
+	  {{> testButtons}}
+	  </div>
+	 </div>
 	<div class="row-fluid">
+	  	  
 	  <div class="span12">
 	    <div class="banner">
 	    	<table class="bannerTable">
@@ -26,7 +31,7 @@
 	    		<tr>
 	    		  <td>Add the positions you want to track</td>
 	    		  <td>Keep all the details in one place</td>
-	    		  <td>Follow progress with stats and reminders</td>
+	    		  <td>Stay posted with stats and reminders</td>
 	    		  <td>Get an awesome job</td>
 	    		</tr>
 	    	</table>
@@ -105,16 +110,18 @@
 		  	<div class="logos"><i class="icon-briefcase icon-2x"></i><h3>JobLoop</h3></div>
 			    <ul class="nav">
 			      <li class="active"><a href="#"><i class="icon-envelope-alt"></i></a></li>
-			      <button class="addData btn btn-small btn-primary">AddTestData</button>
-			      <button class="deleteData btn btn-small">DeleteTestData</button>
 			      <li><a href="#"><i class="icon-calendar"></i></a></li>
 			      <li><a href="#"><i class="icon-bell-alt"></i></a></li>
-
-			      <li><a href="#">{{loginButtons align="right"}}</a></li>
+			      <li><a href="#">Sign Up / Log In</a></li>
 			    </ul>
 		  </div>
 		</div>
 	</div>
+</template>
+
+<template name="testButtons">
+  <button class="addData btn btn-small btn-primary">AddTestData</button>
+  <button class="deleteData btn btn-small">DeleteTestData</button>
 </template>
 
 <template name="homeFooter">
