tweaking test data

--- a/client/jobloop.html
+++ b/client/jobloop.html
@@ -120,8 +120,10 @@
 </template>
 
 <template name="testButtons">
-  <button class="addData btn btn-small btn-primary">AddTestData</button>
-  <button class="deleteData btn btn-small">DeleteTestData</button>
+  <button class="addData btn btn-small btn-primary">AddTestData
+  </button>
+  <button class="deleteData btn btn-small">DeleteTestData
+  </button>
 </template>
 
 <template name="homeFooter">
