Got Autosubscribe working Properly

--- a/client/jobloop.html
+++ b/client/jobloop.html
@@ -112,7 +112,7 @@
 			      <li class="active"><a href="#"><i class="icon-envelope-alt"></i></a></li>
 			      <li><a href="#"><i class="icon-calendar"></i></a></li>
 			      <li><a href="#"><i class="icon-bell-alt"></i></a></li>
-			      <li><a href="#">Sign Up / Log In</a></li>
+			      <li><a href="#">{{loginButtons}}</a></li>
 			    </ul>
 		  </div>
 		</div>
