--- a/client/jobloop.html
+++ b/client/jobloop.html
@@ -63,31 +63,33 @@
 	  <div class="applicationSummary">
 	  	<div class="tabbable">
 		  <ul class="nav nav-tabs">
-		    <li class="active companyTab"><a href="#tab0" data-toggle="tab">Company</a></li>
-		    <li><a href="#tab1" data-toggle="tab">Application</a></li>
-		    <li><a href="#tab2" data-toggle="tab">Contact</a></li>
-		    <li><a href="#tab3" data-toggle="tab">Screen</a></li>
-		    <li><a href="#tab4" data-toggle="tab">Interviews</a></li>
-		    <li><a href="#tab5" data-toggle="tab">Decisions</a></li>
+		    <li class="active companyTab"><a href="#tab{{appID}}A" data-toggle="tab">Company</a></li>
+		    <li><a href="#tab{{appID}}B" data-toggle="tab">Application</a></li>
+		    <li><a href="#tab{{appID}}C" data-toggle="tab">Contact</a></li>
+		    <li><a href="#tab{{appID}}D" data-toggle="tab">Screen</a></li>
+		    <li><a href="#tab{{appID}}E" data-toggle="tab">Interviews</a></li>
+		    <li><a href="#tab{{appID}}F" data-toggle="tab">Decisions</a></li>
 		  </ul>
 
 		  <div class="tab-content">
-		  	<div class="tab-pane active" id="tab0">
+		  	<div class="tab-pane active" id="tab{{appID}}A">
 		      <p>Company Info for {{company}}</p>
 		    </div>
-		    <div class="tab-pane" id="tab1">
-		      <p>Application Notes etc</p>
+		    <div class="tab-pane" id="tab{{appID}}B">
+		      {{#each applicationNotes}}
+		      <p>{{content}}</p>
+		      {{/each}}
 		    </div>
-		    <div class="tab-pane" id="tab2">
+		    <div class="tab-pane" id="tab{{appID}}C">
 		      <p>Contact info here.</p>
 		    </div>
-		    <div class="tab-pane" id="tab3">
+		    <div class="tab-pane" id="tab{{appID}}D">
 		      <p>Screens and stuff.</p>
 		    </div>
-		    <div class="tab-pane" id="tab4">
+		    <div class="tab-pane" id="tab{{appID}}E">
 		      <p>Interviewing stuff here.</p>
 		    </div>
-		    <div class="tab-pane" id="tab5">
+		    <div class="tab-pane" id="tab{{appID}}F">
 		      <p>Decisions on offers, and rejections.</p>
 		    </div>
 		  </div>
