--- a/client/jobloop.html
+++ b/client/jobloop.html
@@ -73,7 +73,7 @@
 
 		  <div class="tab-content">
 		  	<div class="tab-pane active" id="tab0">
-		      <p>Company Info for {{company}}</p>
+		  		{{> company}}
 		    </div>
 		    <div class="tab-pane" id="tab1">
 		      <p>Application Notes etc</p>
