--- a/client/jobloop.html
+++ b/client/jobloop.html
@@ -72,7 +72,7 @@
 		  </ul>
 
 		  <div class="tab-content">
-		  	<div class="tab-pane active" id="tab0">
+		  	<div class="tab-pane" id="tab{{appID}}A">
 		  		{{> company}}
 		    </div>
 		    <div class="tab-pane" id="tab{{appID}}B">
