--- a/client/jobloop.html
+++ b/client/jobloop.html
@@ -2,6 +2,7 @@
   <link href='http://fonts.googleapis.com/css?family=Raleway:400,600' rel='stylesheet' type='text/css'>
   <title>Job Loop</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script type="text/javascript" src="//api.filepicker.io/v1/filepicker.js"></script>
 </head>
 
 <body>
@@ -18,7 +19,7 @@
 	  </div>
 	 </div>
 	<div class="row-fluid">
-	  	  
+
 	  <div class="span12">
 	    <div class="banner">
 	    	<table class="bannerTable">
@@ -98,7 +99,7 @@
 
 		<div class="span6 topbarBox" id="statsTopbar">
 			<p>Stats</p>
-			
+
 		</div>
 	</div>
 </template>
@@ -111,8 +112,11 @@
 			    <ul class="nav">
 			      <li class="active"><a href="#"><i class="icon-envelope-alt"></i></a></li>
 			      <li><a href="#"><i class="icon-calendar"></i></a></li>
-			      <li><a href="#"><i class="icon-bell-alt"></i></a></li>
-			      <li><a href="#">{{loginButtons}}</a></li>
+            <li><a href="#"><i class="icon-bell-alt"></i></a></li>
+            {{#if currentUser}}
+			         <li><a href="/account"><i class="icon-cog"></i></a></li>
+            {{/if}}
+			      <li><a href="#">{{loginButtons align="right"}}</a></li>
 			    </ul>
 		  </div>
 		</div>
