--- a/client/companytab/company.html
+++ b/client/companytab/company.html
@@ -1,4 +1,5 @@
 <template name="company">
+  <label class="hiddenItem appIdLabel">{{appID}}</label>
   <div>
     <button class="editCompany btn btn-small">Edit
     </button>
