styled company tab editing section.

--- a/client/companytab/company.html
+++ b/client/companytab/company.html
@@ -1,6 +1,6 @@
 <template name="company">
   <div class="companyContainer">
-  	<span class="companyTitle">Company Name : {{company}}</span>
+  	<span class="companyTitle">Company Name: <label class="companyNameLabel">{{company}}</label></span>
     <button class="saveCompany btn btn-small hiddenItem">Save
     </button>
     <button class="editCompany btn btn-small"><i class="icon-edit icon-large"></i>
