Adding styling for the account page and updated the logo to act as a link because there is no link to the home page. Removed active class from envelope icon - ond't know why it was there.

--- a/client/jobloop.html
+++ b/client/jobloop.html
@@ -117,9 +117,9 @@
 	<div id="utils">
 		<div class="navbar">
 		  <div class="navbar-inner">
-		  	<div class="logos"><i class="icon-briefcase icon-2x"></i><h3>JobLoop</h3></div>
+		  	<div class="logos"><a href="/"><i class="icon-briefcase icon-2x"></i><h3>JobLoop</h3></a></div>
 			    <ul class="nav">
-			      <li class="active"><a href="#"><i class="icon-envelope-alt"></i></a></li>
+			      <li><a href="#"><i class="icon-envelope-alt"></i></a></li>
 			      <li><a href="#"><i class="icon-calendar"></i></a></li>
             <li><a href="#"><i class="icon-bell-alt"></i></a></li>
             {{#if currentUser}}
