Preparing to merge

--- a/client/jobloop.html
+++ b/client/jobloop.html
@@ -65,7 +65,7 @@
 </template>
 
 <template name="applications">
-	
+	<span id="appList">
 	  {{#each Applications}}
 	  <div class="applicationSummary">
 	  	<div class="tabbable">
@@ -99,7 +99,7 @@
 	    </div>
 	  </div>
 	  {{/each}}
-	
+	</span>
 </template>
 
 <template name="topbar">
