Updated the account page.

--- a/client/account.html
+++ b/client/account.html
@@ -3,7 +3,7 @@
   <div class="account">
     <p class="user-name">{{username}}</p>
     {{#if resume}}
-      <p><a href={{resume}}>Your current resume</a></p>
+      <p><a href={{resume}}>Click to view your current resume</a></p>
     {{/if}}
     <button id="resume-button" class="upload-resume">Upload Resume</button>
   </div>
