Fixed some minor bugs in the company html and updated some styles.

--- a/client/companytab/company.html
+++ b/client/companytab/company.html
@@ -6,13 +6,13 @@
     {{/unless}}
 
     </label></span>
-    <div>{{companyData.name}}</div>
-    <div>PhoneNumber: {{companyData.phone}}</div>
-    <div>Website: {{companyData.url}} </div>
-    <div>Address: {{companyData.address}} </div>
-    <div>Assets: {{companyData.assets}} </div>
-    <div>Most Recent Revenue Report:{{companyData.income}}</div>
-    <dib>Year Founded : {{companyData.yearFounded}} </div>
+    <div><span class="company-data">{{companyData.name}}</span></div>
+    <div>PhoneNumber: <span class="company-data">{{companyData.phone}}</span></div>
+    <div>Website: <a href={{companyData.url}}><span class="company-data">{{companyData.url}}</span></a></div>
+    <div>Address: <span class="company-data">{{companyData.address}}</span></div>
+    <div>Assets: <span class="company-data">{{companyData.assets}}</span></div>
+    <div>Most Recent Revenue Report: <span class="company-data">{{companyData.income}}</span></div>
+    <div>Year Founded: <span class="company-data">{{companyData.yearFounded}}</span></div>
   <label class="hiddenItem appIdLabel">{{appID}}</label>
   <div>
     <button class="saveCompany btn btn-small hiddenItem">Save
