added login capability to call-to-action button for now. the button will produce a better/more helpful modal in the future.

--- a/client/jobloop.html
+++ b/client/jobloop.html
@@ -60,7 +60,7 @@
   		<h2>You haven't added any jobs yet!</h2>
   		<h4>Start tracking your progress now - add the latest position you're working toward and attach hiring team contact info, company research notes, appointment reminders, and more!</h4>
   	</div>
-	<button class="btn btn-large btn-block" type="button">Add a Job to Track!</button>
+	<button class="btn btn-large btn-block" type="button">Add a Job to Track! {{loginButtons}}</button>
   </div>
 </template>
 
@@ -107,10 +107,10 @@
 		<div class="span6 topbarBox" id="toDoTopbar">
 			<h3>To Do</h3>
 			<ul>
-				<li><i class="icon-ok"></i>stuff</li>
-				<li><i class="icon-ok"></i>stuff</li>
-				<li><i class="icon-ok"></i>stuff</li>
-				<li><i class="icon-ok"></i>stuff</li>
+				<li><i class="icon-ok"></i>Follow up with Hack Reactor team</li>
+				<li><i class="icon-ok"></i>Phone screen with Sam Smith 2/17</li>
+				<li><i class="icon-ok"></i>Finish programming test/send</li>
+				<li><i class="icon-ok"></i>Write a better to-do template</li>
 			</ul>
 		</div>
 
@@ -159,7 +159,6 @@
 
 <template name="homeFooter">
 	<div id="footer">
-		footer stuff
 	</div>
 </template>
 
