some tab additions

--- a/client/jobloop.html
+++ b/client/jobloop.html
@@ -87,7 +87,7 @@
 		      {{/each}}
 		    </div>
 		    <div class="tab-pane" id="tab{{appID}}C">
-		      <p>Contact info here.</p>
+		      <p>{{> contact}}</p>
 		    </div>
 		    <div class="tab-pane" id="tab{{appID}}E">
 		      <p><img src="/calendar.png"></p>
